<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>dev.orne</groupId>
    <artifactId>java-module-root-pom</artifactId>
    <version>0.4.0-SNAPSHOT</version>
    <relativePath />
  </parent>

  <groupId>dev.orne</groupId>
  <artifactId>i18n</artifactId>
  <version>0.1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>Orne I18N</name>
  <description>Orne I18N utilities</description>
  <inceptionYear>2021</inceptionYear>
  <url>https://orne-dev.github.io/java-i18n/</url>

  <licenses>
    <license>
      <name>GNU Lesser General Public License (LGPL) version 3.0</name>
      <url>http://www.gnu.org/licenses/lgpl-3.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <developers>
    <developer>
      <id>wamphiry</id>
      <name>(w) Iker Hernaez</name>
      <url>https://github.com/ihernaez</url>
    </developer>
  </developers>

  <scm>
    <url>http://github.com/orne-dev/java-i18n/tree/master</url>
    <connection>scm:git:git://github.com/orne-dev/java-i18n.git</connection>
    <developerConnection>scm:git:ssh://github.com:orne-dev/java-i18n.git</developerConnection>
    <tag>HEAD</tag>
  </scm>

  <properties>
    <java.version>11</java.version>
    <java.target.version>8</java.target.version>
    <license.licenseName>lgpl_v3</license.licenseName>

    <sonar.projectKey>java-i18n</sonar.projectKey>

    <commons.lang.version>3.10</commons.lang.version>
    <commons.text.version>1.9</commons.text.version>

    <javax.validation.version>2.0.1.Final</javax.validation.version>
    <jakarta.validation.version>3.0.0</jakarta.validation.version>
    <jaxb.version>2.1</jaxb.version>
    <fasterxml.jackson.version>2.11.0</fasterxml.jackson.version>
    <spring.framework.version>5.0.0.RELEASE</spring.framework.version>

    <hibernate.validation.version>7.0.0.Final</hibernate.validation.version>
    <glassfish.jakarta.el.version>4.0.0</glassfish.jakarta.el.version>

    <jaxb2.maven.plugin.version>2.5.0</jaxb2.maven.plugin.version>
    <jaxb2.basics.version>0.12.0</jaxb2.basics.version>
    <jaxb2.basics.annotate.version>1.1.0</jaxb2.basics.annotate.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>jcl-over-slf4j</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>${commons.lang.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-text</artifactId>
      <version>${commons.text.version}</version>
    </dependency>

    <dependency>
      <groupId>javax.validation</groupId>
      <artifactId>validation-api</artifactId>
      <version>${javax.validation.version}</version>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>jakarta.validation</groupId>
      <artifactId>jakarta.validation-api</artifactId>
      <version>${jakarta.validation.version}</version>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>javax.xml.bind</groupId>
      <artifactId>jaxb-api</artifactId>
      <version>${jaxb.version}</version>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${fasterxml.jackson.version}</version>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-context</artifactId>
      <version>${spring.framework.version}</version>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.hibernate.validator</groupId>
      <artifactId>hibernate-validator</artifactId>
      <version>${hibernate.validation.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.glassfish</groupId>
      <artifactId>jakarta.el</artifactId>
      <version>${glassfish.jakarta.el.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-test</artifactId>
      <version>${spring.framework.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <configuration>
            <groups>ut</groups>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-failsafe-plugin</artifactId>
          <configuration>
            <groups>it</groups>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>jaxb2-maven-plugin</artifactId>
        <version>${jaxb2.maven.plugin.version}</version>
        <dependencies>
          <dependency>
            <groupId>org.jvnet.jaxb2_commons</groupId>
            <artifactId>jaxb2-basics</artifactId>
            <version>${jaxb2.basics.version}</version>
          </dependency>
          <dependency>
            <groupId>org.jvnet.jaxb2_commons</groupId>
            <artifactId>jaxb2-basics-annotate</artifactId>
            <version>${jaxb2.basics.annotate.version}</version>
          </dependency>
        </dependencies>
        <!--
        <executions>
          <execution>
            <id>generate-jaxb-classes</id>
            <goals>
              <goal>xjc</goal>
            </goals>
          </execution>
        </executions>
        -->
        <configuration>
          <sources>
            <source>src/main/resources/META-INF/xsd/dev-orne-i18n.xsd</source>
          </sources>
          <xjbSources>
            <source>src/main/xjb/dev-orne-i18n.xjb</source>
          </xjbSources>
          <outputDirectory>${project.build.directory}/generated-sources/xjc</outputDirectory>
          <clearOutputDir>true</clearOutputDir>
          <noPackageLevelAnnotations>true</noPackageLevelAnnotations>
          <encoding>UTF-8</encoding>
          <locale>en</locale>
          <arguments>
              <argument>-XsimpleHashCode</argument>
              <argument>-XsimpleEquals</argument>
          </arguments>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
